--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "url": "https://github.com/pletcher/node-js-npm-lab/issues"
   },
   "homepage": "https://github.com/pletcher/node-js-npm-lab#readme",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.11"
+  },
   "devDependencies": {
     "mocha": "^5.2.0"
   }
